--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,3 +5,4 @@ Title: <%= @article.title %>
 <p>
 Description: <%= @article.description %>
 </p>
+<%= link_to "Edit", edit_article_path(@article) %> || <%= link_to "All Articles", articles_path %>
