--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,2 @@
-<h1>Edit existing article</h1>
+<h1 align="center">Edit existing article</h1>
 <%= render "form" %>
-
-<%= link_to "All Articles", articles_path %>
