--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,2 @@
-<h1>Create an Article</h1>
+<h1 align="center">Create an Article</h1>
 <%= render 'form' %>
-
-<%= link_to "All Articles", articles_path %>
