--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,8 +43,19 @@ $navbar-default-bg: black;
     border-top: 1px solid #eaeaea;
     padding-top: 5px;
 }
+
 .description {
     margin-top: 2px;
+}
+
+.article-title{
+    font-weight: bold;
+    font-size: 1.5em;
+}
+.article-body{
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 footer {
