--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,6 +10,7 @@
                 <%= truncate(article.description, length:100) %>
             </div>
             <div class="article-actions">
+                <%= link_to "Show", article_path(article), class:"btn btn-sm btn-info" %>
                 <%= link_to "Edit", edit_article_path(article),
                    class:"btn btn-sm btn-primary" %>
                 <%= link_to "Delete", article_path(article),
