--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,12 +16,15 @@
                 </div>
             </div>
             <div class="article-actions">
-                <%= link_to "Show", article_path(article), class:"btn btn-sm btn-info" %>
-                <%= link_to "Edit", edit_article_path(article),
-                   class:"btn btn-sm btn-primary" %>
-                <%= link_to "Delete", article_path(article),
-                   method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-danger" %>
+                <%= link_to "Read this article", article_path(article), class:"btn btn-sm btn-info" %>
+                <% if logged_in? && current_user == article.user %>
+                    <%= link_to "Edit", edit_article_path(article),
+                    class:"btn btn-sm btn-primary" %>
+                   <%= link_to "Delete", article_path(article),
+                    method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-danger" %>
+                <% end %>
             </div>
+
         </div>
     </div>
 </div>
