--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,13 +22,15 @@
     <% end %>
     <h4 class="center description"><strong>Description: </strong></h4>
     <hr>
-     <%= simple_format(@article.description) %>
-     <div class="article-actions">
-         <%= link_to "Edit", edit_article_path(@article),
+    <%= simple_format(@article.description) %>
+    <div class="article-actions">
+        <% if logged_in? && current_user == @article.user %>
+            <%= link_to "Edit", edit_article_path(@article),
             class:"btn btn-sm btn-primary" %>
-         <%= link_to "Delete", article_path(@article),
+            <%= link_to "Delete", article_path(@article),
             method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-danger" %>
-         <%= link_to "View all articles", articles_path, class:"btn btn-sm btn-success" %>
-     </div>
+        <% end %>
+        <%= link_to "View all articles", articles_path, class:"btn btn-sm btn-success" %>
+    </div>
 
 </div>
