--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -17,7 +17,7 @@
             </div>
             <div class="article-actions">
                 <%= link_to "Read this article", article_path(article), class:"btn btn-sm btn-info" %>
-                <% if logged_in? && current_user == article.user %>
+                <% if logged_in? && (current_user == article.user || current_user.admin?) %>
                     <%= link_to "Edit", edit_article_path(article),
                     class:"btn btn-sm btn-primary" %>
                    <%= link_to "Delete", article_path(article),
