--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,12 +13,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><%= link_to "Articles", articles_path %></li>
+                <li><%= link_to "All Articles", articles_path %></li>
                 <li><%= link_to "All Users", users_path %></li>
                 <% if logged_in? %>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                        aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+                        aria-haspopup="true" aria-expanded="false">Article Actions<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><%= link_to "New Article", new_article_path %></li>
                             <li><a href="#">Another action</a></li>
@@ -30,6 +30,20 @@
                         </ul>
                     </li>
                 <% end %>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                    aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><%= link_to "All Categories", categories_path %></li>
+                        <% Category.all.each do |category| %>
+                            <li><%= link_to "#{category.name}", category_path(category) %></li>
+                        <% end %>
+                        <% if logged_in? && current_user.admin? %>
+                        <li role="separator" class="divider"></li>
+                        <li><%= link_to "Add new category", new_category_path %></li>
+                        <% end %>
+                    </ul>
+                </li>
             </ul>
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
