--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -15,6 +15,9 @@
                     </small>
                 </div>
             </div>
+            <% if article.categories.any? %>
+                <p>Categories: <%= render article.categories %></p>
+            <% end %>
             <div class="article-actions">
                 <%= link_to "Read this article", article_path(article), class:"btn btn-sm btn-info" %>
                 <% if logged_in? && (current_user == article.user || current_user.admin?) %>
