--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,6 +19,16 @@
                 </div>
             </div>
             <div class="form-group">
+                <div class="control-label col-sm-2">
+                    <%= f.label :category %>
+                </div>
+                <div class="col-sm-10">
+                    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+                        <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+                    <% end %>
+                </div>
+            </div>
+            <div class="form-group">
                 <div class="col-sm-10 col-sm-offset-2">
                     <%= f.submit class: "btn btn-primary btn-lg"%>
                 </div>
