--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -2,11 +2,10 @@
 <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
         <div class="well well-lg">
-            <div class="article-title">
-                <%= link_to article.title, article_path(article) %>
-            </div>
+            <%= react_component("Article", { title: article.title,
+                                                 path: article_path(article),
+                                                 description: truncate(article.description, length: 100)}) %>
             <div class="article-body">
-                <%= truncate(article.description, length:100) %>
                 <div class="article-meta-details">
                     <small>
                         Created by: <%= article.user.username if article.user %>,
