Change timestamp from ruby component to react component

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -2,12 +2,14 @@
 <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
         <div class="well well-lg">
-            <%= react_component('Article', { description:  truncate(article.description, escape: false, length: 100),
-                                            path:         article_path(article),
-                                            title:        article.title,
-                                            author:       article.user,
-                                            created_at:   time_ago_in_words(article.created_at),
-                                            updated_at:   time_ago_in_words(article.updated_at) }) %>
+            <%= react_component('Article', { 
+                description:  truncate(article.description, escape: false, length: 100),
+                path:         article_path(article),
+                title:        article.title,
+                username:     article.user,
+                created_at:   article.created_at,
+                updated_at:   article.updated_at
+                }) %>
             
             <% if article.categories.any? %>
                 <p>Categories: <%= render article.categories %></p>
